# mlx-server-nano

./: .gitignore  README.md  TESTING.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: CACHE_MANAGEMENT.md  README.md
examples/: README.md  cache_performance_example.py  conversation_detection_example.py  streaming_cache_example.py
src/mlx_server_nano/: __init__.py  app.py  chat_templates.py  config.py  logging_config.py  main.py  model_manager.py  schemas.py  template_manager.py  tool_calling.py
src/mlx_server_nano/model_manager/: __init__.py  background_tasks.py  cache.py  generation.py  message_formatting.py  stop_sequences.py  tool_calling.py
src/mlx_server_nano/model_manager/cache_manager/: __init__.py  base.py  model_cache.py  model_cache_manager.py  prompt_cache.py  prompt_cache_manager.py
templates/: config.yaml  default.jinja2  devstral.jinja2  llama.jinja2  mistral.jinja2  qwen3.jinja2
tests/: conftest.py  test_basic_validation.py  test_examples.py
tests/fixtures/: test_data.py
tests/integration/: test_api_endpoints.py  test_model_management.py
tests/unit/: test_config.py  test_memory_management.py  test_model_manager.py  test_parameter_handling.py  test_schemas.py  test_tool_calling.py  test_xml_tool_calling.py
