[project]
name = "mlx-server-nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "graelo", email = "graelo@graelo.cc" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "mistral-common>=1.8.3",
  "mlx-lm",
  "uvicorn[standard]>=0.35.0",
  "typer>=0.12.3",
]

[project.scripts]
mlx-server-nano = "mlx_server_nano.main:app_cli"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mlx-lm = { git = "https://github.com/graelo/mlx-lm", branch = "feat/mistral" }

[dependency-groups]
dev = ["psutil>=7.0.0", "ruff>=0.7.0", "pyright>=1.1.0"]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "httpx>=0.24.0",          # For TestClient
]

[tool.coverage.run]
source = ["src/mlx_server_nano"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
