[project]
name = "mlx-server-nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bosr", email = "bosr@bosr.cc" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "mistral-common>=1.8.3",
    "mlx-lm",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
mlx-server-nano = "mlx_server_nano.main:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mlx-lm = { git = "https://github.com/graelo/mlx-lm", branch = "feat/tekken" }
